# geezer

./: README.md  pyproject.toml  setup.py
geezer/: __init__.py  config.py  demo.py  log.py
geezer.egg-info/: PKG-INFO
